--- a/src/styles/core/base/forms.less
+++ b/src/styles/core/base/forms.less
@@ -11,7 +11,7 @@
 
     legend {
         font-weight: @legend-font-weight;
-        margin-bottom: @base-spacing-unit-half;
+        margin-bottom: @spacing-half;
     }
 
     label {
