--- a/src/styles/core/base/lists.less
+++ b/src/styles/core/base/lists.less
@@ -4,7 +4,7 @@
 .lists(@boolean) when (@boolean = true) {
 
     ul, ol {
-        margin-left: @base-spacing-unit;
+        margin-left: @spacing-base;
         & & {
             margin-bottom: auto;
         }
