--- a/src/styles/core/base/typography.less
+++ b/src/styles/core/base/typography.less
@@ -108,7 +108,7 @@
         p {
             margin: 0;
             + p {
-                margin-top: @base-spacing-unit-half;
+                margin-top: @spacing-half;
             }
         }
         cite {
