--- a/src/styles/core/mixins.less
+++ b/src/styles/core/mixins.less
@@ -14,4 +14,4 @@
     @import 'mixins/momentum-scrolling';
     @import 'mixins/placeholder';
     @import 'mixins/vertically-centered';
-    @import 'mixins/webkit-scrollbar';
+    @import 'mixins/webkit-scrollbars';
