--- a/src/styles/core/mixins/webkit-scrollbars.less
+++ b/src/styles/core/mixins/webkit-scrollbars.less
@@ -1,11 +1,11 @@
 //
-// Webkit-scrollbar
+// Webkit-scrollbars
 // -------------------------------------------------------
 
-.webkit-scrollbar() {
+.webkit-scrollbars() {
     &::-webkit-scrollbar {
-        height: (@base-spacing-unit-half / 2);
-        width: (@base-spacing-unit-half / 2);
+        height: (@spacing-half / 2);
+        width: (@spacing-half / 2);
         -webkit-appearance: none;
     }
 
