--- a/src/styles/core/resets.less
+++ b/src/styles/core/resets.less
@@ -150,14 +150,8 @@
         font-family: inherit;
         font-style: inherit;
         font-weight: inherit;
-    }
-
-    // specify the minimum height of form elements
-    button,
-    input,
-    select,
-    textarea {
-        min-height: unit(@line-height-ratio, em);
+        // specify the minimum height of form elements
+        //min-height: unit(@line-height-ratio, em);
     }
 
     // Specify the font family of code elements and address odd `em`-unit font size rendering in all browsers.
