--- a/src/styles/objects/animate/bounceInDown.less
+++ b/src/styles/objects/animate/bounceInDown.less
@@ -6,11 +6,11 @@
 
     60% {
         opacity: 1;
-        transform: translateY(@base-spacing-unit);
+        transform: translateY(@spacing-base);
     }
 
     80% {
-        transform: translateY(-@base-spacing-unit-half);
+        transform: translateY(-@spacing-half);
     }
 
     100% {
