--- a/src/styles/objects/animate/bounceInLeft.less
+++ b/src/styles/objects/animate/bounceInLeft.less
@@ -6,11 +6,11 @@
 
     60% {
         opacity: 1;
-        transform: translateX(@base-spacing-unit);
+        transform: translateX(@spacing-base);
     }
 
     80% {
-        transform: translateX(-@base-spacing-unit-half);
+        transform: translateX(-@spacing-half);
     }
 
     100% {
