--- a/src/styles/objects/animate/bounceInUp.less
+++ b/src/styles/objects/animate/bounceInUp.less
@@ -3,16 +3,16 @@
         opacity: 0;
         transform: translateY(2000px);
     }
-    
+
     60% {
         opacity: 1;
-        transform: translateY(-@base-spacing-unit);
+        transform: translateY(-@spacing-base);
     }
-    
+
     80% {
-        transform: translateY(@base-spacing-unit-half);
+        transform: translateY(@spacing-half);
     }
-    
+
     100% {
         transform: translateY(0);
     }
