--- a/src/styles/objects/animate/bounceOutRight.less
+++ b/src/styles/objects/animate/bounceOutRight.less
@@ -5,7 +5,7 @@
 
     20% {
         opacity: 1;
-        transform: translateX(-@base-spacing-unit);
+        transform: translateX(-@spacing-base);
     }
 
     100% {
