--- a/src/styles/objects/animate/bounceOutUp.less
+++ b/src/styles/objects/animate/bounceOutUp.less
@@ -5,7 +5,7 @@
 
     20% {
         opacity: 1;
-        transform: translateY(@base-spacing-unit);
+        transform: translateY(@spacing-base);
     }
 
     100% {
