--- a/src/styles/objects/animate/fadeInRight.less
+++ b/src/styles/objects/animate/fadeInRight.less
@@ -1,7 +1,7 @@
 @keyframes fadeInRight {
     0% {
         opacity: 0;
-        transform: translateX(@base-spacing-unit);
+        transform: translateX(@spacing-base);
     }
 
     100% {
