--- a/src/styles/objects/animate/fadeOutRight.less
+++ b/src/styles/objects/animate/fadeOutRight.less
@@ -6,7 +6,7 @@
 
     100% {
         opacity: 0;
-        transform: translateX(@base-spacing-unit);
+        transform: translateX(@spacing-base);
     }
 }
 
