--- a/src/styles/objects/animate/fadeOutUp.less
+++ b/src/styles/objects/animate/fadeOutUp.less
@@ -6,7 +6,7 @@
 
     100% {
         opacity: 0;
-        transform: translateY(-@base-spacing-unit);
+        transform: translateY(-@spacing-base);
     }
 }
 
