--- a/src/styles/objects/animate/shake.less
+++ b/src/styles/objects/animate/shake.less
@@ -7,13 +7,13 @@
     50%,
     70%,
     90% {
-        transform: translateX(-@base-spacing-unit-half);
+        transform: translateX(-@spacing-half);
     }
     20%,
     40%,
     60%,
     80% {
-        transform: translateX(@base-spacing-unit-half);
+        transform: translateX(@spacing-half);
     }
 }
 .shake {
