--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -18,11 +18,11 @@
         }
     }
 
-    .icon-lg:before { font-size: 1.5em; }
-    .icon-2x:before { font-size: 2em; }
-    .icon-3x:before { font-size: 3em; }
-    .icon-4x:before { font-size: 4em; }
-    .icon-5x:before { font-size: 5em; }
+    .icon--lg:before { font-size: 1.5em; }
+    .icon--2x:before { font-size: 2em; }
+    .icon--3x:before { font-size: 3em; }
+    .icon--4x:before { font-size: 4em; }
+    .icon--5x:before { font-size: 5em; }
 
 
     // Insert icon styles here
