--- a/src/styles/objects/table-styles.less
+++ b/src/styles/objects/table-styles.less
@@ -94,9 +94,9 @@
     // </element>
 
     .table-responsive {
-        margin-bottom: @base-spacing-unit; // add vertical-rhytmn
+        margin-bottom: @spacing-base; // add vertical-rhytmn
         .momentum-scrolling();
-        .webkit-scrollbar();
+        .webkit-scrollbars();
 
         table {
             margin-bottom: 0; // remove vertical-rhytmn
