--- a/src/styles/utilities/utilities.less
+++ b/src/styles/utilities/utilities.less
@@ -113,6 +113,14 @@
         opacity: .5;
     }
 
+    .u-color-primary {
+       color: @color-primary;
+    }
+
+    .u-color-secondary {
+       color: @color-secondary;
+    }
+
     .u-color-success {
        color: @color-success;
     }
