--- a/src/styles/objects/animate/fadeInDown.less
+++ b/src/styles/objects/animate/fadeInDown.less
@@ -1,7 +1,7 @@
 @keyframes fadeInDown {
     0% {
         opacity: 0;
-        transform: translateY(-@base-spacing-unit);
+        transform: translateY(-@spacing-base);
     }
 
     100% {
