--- a/src/styles/objects/animate/fadeInLeft.less
+++ b/src/styles/objects/animate/fadeInLeft.less
@@ -1,7 +1,7 @@
 @keyframes fadeInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-@base-spacing-unit);
+        transform: translateX(-@spacing-base);
     }
 
     100% {
