--- a/src/styles/objects/animate/fadeInUp.less
+++ b/src/styles/objects/animate/fadeInUp.less
@@ -1,7 +1,7 @@
 @keyframes fadeInUp {
     0% {
         opacity: 0;
-        transform: translateY(@base-spacing-unit);
+        transform: translateY(@spacing-base);
     }
 
     100% {
