--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -6,10 +6,10 @@
     // Fieldset with borders
     fieldset.fieldset--bordered {
         border: @fieldset-border-width @fieldset-border-style @fieldset-border-color;
-        padding: @base-spacing-unit-half @base-spacing-unit @base-spacing-unit @base-spacing-unit;
+        padding: @spacing-half @spacing-base @spacing-base @spacing-base;
         legend {
-            padding: 0 @base-spacing-unit-half;
-            margin: 0 0 0 (@base-spacing-unit-half * -1);
+            padding: 0 @spacing-half;
+            margin: 0 0 0 (@spacing-half * -1);
         }
     }
 
@@ -93,7 +93,7 @@
 
     // Radios and checkboxes
     .radio, .checkbox {
-        margin-bottom: @base-spacing-unit-half / 2; // add some spacing between checkboxes/radios
+        margin-bottom: @spacing-half / 2; // add some spacing between checkboxes/radios
         user-select: none;
 
         // Inline styles
@@ -101,7 +101,7 @@
         &.radio--inline {
             @media @medium-up {
                 display: inline-block;
-                margin-right: @base-spacing-unit; // space out consecutive inline controls
+                margin-right: @spacing-base; // space out consecutive inline controls
             }
         }
 
@@ -122,7 +122,7 @@
         label {
             position: relative;
             margin: 0;
-            padding-left: (@input-box-size + (@base-spacing-unit-half / 2));
+            padding-left: (@input-box-size + (@spacing-half / 2));
             line-height: @input-box-size;
             &:before,
             &:after {
