--- a/templates/_iconfont/icons.html
+++ b/templates/_iconfont/icons.html
@@ -24,7 +24,7 @@
         body {
             background-color: #fff !important;
         }
-        
+
         .docs-header {
             position: fixed;
             top: 0;
@@ -34,13 +34,13 @@
             z-index: 5;
             background: white;
         }
-        
+
         .docs-header h1 {
             font-size: 1rem;
             font-weight: 400;
             line-height: 2.5rem;
         }
-        
+
         .docs-footer {
             padding: 3rem 0;
             background: #212121;
@@ -48,109 +48,109 @@
             color: white;
             font-weight: 00;
         }
-        
+
         .docs-footer a:hover {
             text-decoration: underline;
         }
-        
+
         .docs-navigation {
             margin-top: 4rem;
             position: relative;
         }
-        
+
         .docs-navigation .menu {
             padding-top: 6rem;
             position: fixed;
         }
-        
+
         .docs-navigation .menu li a {
             padding: .25rem 1em;
             line-height: 24px;
             display: block;
         }
-        
+
         .docs-content {
             margin-top: 6rem;
         }
-        
+
         .docs-content section {
             padding-top: 2rem;
             padding-bottom: 2rem;
         }
-        
+
         .docs-content > section > article {
             border-bottom: 1px solid #e6e6e6;
             padding-bottom: 1.5rem;
             margin-bottom: 3rem;
         }
-        
+
         .docs-content > section > article:last-child {
             border-bottom: 0;
             margin-bottom: 0;
             padding-bottom: 0;
         }
-        
+
         .docs-content .hero {
             padding-top: 2rem;
             padding-bottom: 4.5rem;
         }
-        
+
         .docs-content .well {
             border: 1px solid #e6e6e6;
             padding: 1.5rem;
             margin-bottom: 1.5rem;
         }
-        
+
         .docs-footer .svg-heart {
             width: 1rem;
             height: 1rem;
             position: relative;
             top: -.125em;
         }
-        
+
         .docs-footer .svg-heart {
             fill: #d9534f;
         }
-        
+
         .docs-content .grid__columns .row > [class*='col-'] {
             background: #f2f2f2;
             min-height: 1em;
             margin-bottom: 1em;
             background-clip: content-box;
         }
-        
+
         .docs-content .grid__columns [class*='col-'] .row {
             background: white;
             margin-bottom: -1rem;
         }
-        
+
         .docs-content .condition-table th {
             min-width: 100px;
         }
-        
+
         .docs-content .condition-table tbody {
             font-size: 12px !important;
         }
-        
+
         .docs-content .table-responsive #tables__responsive td {
             min-width: 164px;
         }
-        
+
         .docs-content .buttons .button {
             margin-bottom: 1rem;
         }
-        
+
         .docs-content .addons__tooltips a {
             float: left;
             clear: both;
         }
-        
+
         .docs-content .animation {
             cursor: pointer;
             text-align: center;
             position: relative;
         }
-        
+
         .docs-content .animation:before {
             content: "Click to reset";
             font-size: 10px;
@@ -162,7 +162,7 @@
             text-align: center;
             width: 100%;
         }
-        
+
         .docs-content .animation.animation-reset:before {
             display: none;
         }
@@ -171,7 +171,7 @@
             -webkit-animation: animation-reset;
             animation: animation-reset;
         }
-        
+
         .docs-content .animation > div {
             text-align: center;
             display: block;
@@ -179,7 +179,7 @@
             width: 100px;
             margin: 0 auto 1rem auto;
         }
-        
+
         .docs-content .animation .dot {
             display: inline-block;
             width: 1rem;
@@ -188,26 +188,26 @@
             border-radius: 100%;
             background: #333333;
         }
-        
+
         .docs-content .addons__animations .well {
             overflow: hidden;
         }
-        
+
         .docs-content .icons ul {
             list-style: none;
             padding: 0;
             margin: 0;
         }
-        
+
         .docs-content .icons ul li {
             margin-bottom: 1.5rem;
             position: relative;
         }
-        
+
         .docs-content .icons ul li:hover .magnify {
             display: block;
         }
-        
+
         .docs-content .icons ul li .magnify {
             display: none;
             position: absolute;
@@ -217,94 +217,94 @@
             padding-top: .5rem;
             padding-bottom: .5rem;
         }
-        
+
         .docs-content .icons ul li .magnify:hover {
             background-color: #000;
             color: #fff;
         }
-        
+
         .docs-content .icons .magnify ul {
             width: 100%;
             margin-bottom: .5rem;
         }
-        
+
         .docs-content .icons .magnify ul li {
             display: table--cell;
             width: 1%;
             text-align: center;
         }
-        
+
         .docs-content .glyph-name {
             padding-left: 6px;
         }
-        
+
         .docs-content .glyph-class {
             font-size: .75em;
             color: #999;
             display: block;
         }
-        
+
         .docs-content.glyph-codepoint {
             font-size: .75em;
             color: #999;
         }
-        
+
         .white {
             color: white;
         }
-        
+
         .black {
             color: black;
         }
-        
+
         .bg0 {
             background: white;
         }
-        
+
         .bg25 {
             background: #f7f7f7;
         }
-        
+
         .bg50 {
             background: #f2f2f2;
         }
-        
+
         .bg100 {
             background: #e6e6e6;
         }
-        
+
         .bg200 {
             background: #cccccc;
         }
-        
+
         .bg300 {
             background: #b3b3b3;
         }
-        
+
         .bg400 {
             background: #999999;
         }
-        
+
         .bg500 {
             background: #808080;
         }
-        
+
         .bg600 {
             background: #666666;
         }
-        
+
         .bg700 {
             background: #4d4d4d;
         }
-        
+
         .bg800 {
             background: #333333;
         }
-        
+
         .bg900 {
             background: #1a1a1a;
         }
-        
+
         .bg1000 {
             background: black;
         }
@@ -1533,9 +1533,9 @@
                             <code class="glyph-class">.<%= className %>-<%= glyph.name %></code>
                             <div class="well magnify">
                                 <ul class="glyph-magnify">
-                                    <li><i class="<%= className %> <%= className %>-<%= glyph.name %> <%= className %>-lg"></i></li>
-                                    <li><i class="<%= className %> <%= className %>-<%= glyph.name %> <%= className %>-2x"></i></li>
-                                    <li><i class="<%= className %> <%= className %>-<%= glyph.name %> <%= className %>-3x"></i></li>
+                                    <li><i class="<%= className %> <%= className %>-<%= glyph.name %> <%= className %>--lg"></i></li>
+                                    <li><i class="<%= className %> <%= className %>-<%= glyph.name %> <%= className %>--2x"></i></li>
+                                    <li><i class="<%= className %> <%= className %>-<%= glyph.name %> <%= className %>--3x"></i></li>
 
                                 </ul>
                                 <div>
@@ -1744,6 +1744,20 @@
                                 </td>
                             </tr>
                             <tr>
+                                <td><code>.u-color-primary</code>
+                                </td>
+                                <td>
+                                    <div class="u-color-primary">Set text color to "Primay".</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><code>.u-color-secondary</code>
+                                </td>
+                                <td>
+                                    <div class="u-color-secondary">Set text color to "Secondary".</div>
+                                </td>
+                            </tr>
+                            <tr>
                                 <td><code>.u-color-success</code>
                                 </td>
                                 <td>
@@ -1837,7 +1851,7 @@
                 </div>
             </article>
         </section>
-        <hr />        
+        <hr />
         <section class="addons container">
             <header>
                 <h2 class="u-text-normal">Addons</h2>
@@ -2224,15 +2238,15 @@
     <footer class="docs-footer container--fluid" role="contentinfo">
         <small>Hand crafted with <svg class="svg-heart"><use xlink:href="#svg-heart"></use></svg> by <a href="www.rae.fi">RAE</a><br />© 2015</small>
     </footer>
-    
+
     <!-- Styleguide JS -->
     <script>
         [].forEach.call(document.getElementsByClassName("animation"), function (el) {
             el.addEventListener("click", function () {
                 el.preventDefault;
-                
+
                 el.classList.toggle('animation-reset');
-                
+
             });
         });
     </script>
