rename responsive embed

--- a/src/styles/core/variables.less
+++ b/src/styles/core/variables.less
@@ -310,7 +310,7 @@
 @use-form-styles:               true;
 @use-table-styles:              true;
 @use-tooltips:                  true;
-@use-responsive-embed:          true;
+@use-embed-wrap:                true;
 @use-responsive-navigation:     true;
 
 // Utilities
