--- a/src/styles/objects/embed-wrap.less
+++ b/src/styles/objects/embed-wrap.less
@@ -1,5 +1,5 @@
 //
-// Embed wrapper
+// Responsive embed
 // -------------------------------------------------------
 .embed-wrap(@boolean) when (@boolean = true) {
 
