--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -31,7 +31,7 @@
     @import 'objects/form-styles';
     @import	'objects/table-styles';
     @import 'objects/tooltips';
-    @import 'objects/embed-responsive';
+    @import 'objects/embed-wrap';
     @import 'objects/nav-responsive';
 
     @import 'utilities/utilities';
