further rearrange folders

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -4,13 +4,12 @@
 // RAE Framework
 // -------------------------------------------------------
 
-    @import 'core/variables';
-    @import 'core/mixins';
+    @import 'base/core/variables';
+    @import 'base/core/mixins';
+    @import 'base/core/resets';
 
     @import 'utilities/debug';
     @import 'utilities/current-media-query';
-
-    @import 'core/resets';
 
     @import	'base/print';
     @import 'base/main';
