--- a/src/styles/utilities/utilities.less
+++ b/src/styles/utilities/utilities.less
@@ -67,7 +67,7 @@
     }
 
     .u-float-none {
-        float: none;
+        float: none !important;
     }
 
     .u-flex-center {
@@ -91,50 +91,50 @@
     }
 
     .u-text-light {
-        font-weight: 300;
+        font-weight: 300 !important;
     }
 
     .u-text-normal {
-        font-weight: 400;
+        font-weight: 400 !important;
     }
 
     .u-text-semibold {
-        font-weight: 600;
+        font-weight: 600 !important;
     }
 
     .u-text-bold {
-        font-weight: 700;
+        font-weight: 700 !important;
     }
 
 
     // Color utilities
 
     .u-muted {
-        opacity: .5;
+        opacity: .5 !important;
     }
 
     .u-color-primary {
-       color: @color-primary;
+       color: @color-primary !important;
     }
 
     .u-color-secondary {
-       color: @color-secondary;
+       color: @color-secondary !important;
     }
 
     .u-color-success {
-       color: @color-success;
+       color: @color-success !important;
     }
 
     .u-color-warning {
-       color: @color-warning;
+       color: @color-warning !important;
     }
 
     .u-color-danger {
-       color: @color-danger;
+       color: @color-danger !important;
     }
 
     .u-color-info {
-        color: @color-info;
+        color: @color-info !important;
     }
 
 }
