iconfont: codepoints to unicode

--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -8,12 +8,9 @@
     a {
         color: inherit;
         cursor: pointer;
-        transition:
-            background-color @transition-duration-default @transition-easing-default,
-            color @transition-duration-default @transition-easing-default,
-            opacity @transition-duration-default @transition-easing-default,
-            border-color @transition-duration-default @transition-easing-default;
-        &:active, &:hover {
+        transition: background-color @transition-duration-default @transition-easing-default, color @transition-duration-default @transition-easing-default, opacity @transition-duration-default @transition-easing-default, border-color @transition-duration-default @transition-easing-default;
+        &:active,
+        &:hover {
             color: @base-link-color;
         }
     }
