--- a/templates/_iconfont/icons.less
+++ b/templates/_iconfont/icons.less
@@ -25,7 +25,7 @@
     .<%= className %>-5x:before { font-size: 5em; }
 
 
-<% _.each(glyphs, function(glyph) { %>.<%= className %>-<%= glyph.name %>:before { content: "\<%= glyph.codepoint.toString(16).toUpperCase() %>" }
+<% _.each(glyphs, function(glyph) { %>.<%= className %>-<%= glyph.name %>:before { content: "\<%= glyph.unicode[0].charCodeAt(0).toString(16).toUpperCase() %>" }
 <% }); %>
 
 }
