icon codepoint change

--- a/templates/_iconfont/icons.html
+++ b/templates/_iconfont/icons.html
@@ -1539,7 +1539,7 @@
 
                                 </ul>
                                 <div>
-                                    <code class="glyph-codepoint">Unicode: <%= glyph.codepoint.toString(16).toUpperCase() %></code>
+                                    <code class="glyph-codepoint">Unicode: <%= glyph.unicode[0].charCodeAt(0).toString(16).toUpperCase() %></code>
                                 </div>
                             </div>
                             </li>
