add text-overflow mixin and tweak folder structure

--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -13,5 +13,6 @@
     @import 'mixins/media-queries';
     @import 'mixins/momentum-scrolling';
     @import 'mixins/placeholder';
+    @import 'mixins/text-overflow';
     @import 'mixins/vertically-centered';
     @import 'mixins/webkit-scrollbars';
