--- a/src/styles/utilities/utilities.less
+++ b/src/styles/utilities/utilities.less
@@ -70,6 +70,13 @@
         float: none !important;
     }
 
+    .u-center-block {
+        display: block;
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .u-flex-center {
         display: flex !important;
         align-items: center !important;
