--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -262,17 +262,17 @@
 // -------------------------------------------------------
 @tooltip-background:            @grey-800;
 @tooltip-color:                 @grey-100;
-@tooltip-border-radius:         3px;
-@tooltip-vertical-padding:      6px;
-@tooltip-horizontal-padding:    10px;
+@tooltip-border-radius:         @border-radius-default;
+@tooltip-vertical-padding:      @spacing-half;
+@tooltip-horizontal-padding:    @spacing-half;
 @tooltip-multiline-width:       160px;
 @tooltip-box-shadow:            @box-shadow-default;
 @tooltip-offset:                2px;
-@tooltip-anim-duration:         @transition-duration-default;
+@tooltip-anim-duration:         100ms;
 @tooltip-anim-delay:            100ms;
 @tooltip-font-size:             11px;
 @tooltip-font-weight:           400;
-@tooltip-letter-spacing:        0;
+@tooltip-letter-spacing:        @letter-spacing-loose;
 @tooltip-arrow-size:            6px;
 
 
