media-query mixing for ie

--- a/src/styles/base/mixins/media-queries.less
+++ b/src/styles/base/mixins/media-queries.less
@@ -59,3 +59,9 @@
 // Retina
 
 @retina: ~"only screen and (-webkit-min-device-pixel-ratio: 2),only screen and (min--moz-device-pixel-ratio: 2),only screen and (-o-min-device-pixel-ratio: 2/1),only screen and (min-device-pixel-ratio: 2),only screen and (min-resolution: 192dpi),only screen and (min-resolution: 2dppx)";
+
+// Internet Explorer media-query hacks
+
+@ie8: \0screen;
+
+@ie9-10: ~"screen and (min-width:0\0)";
